[package]
edition = "2021"
name = "stress4844"
version = "0.1.0"

[lib]
name = "stress4844"
path = "src/main.rx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.25", features = ["derive"]}
ethers = "1.0.1"
ethers-flashbots = "0.11.0"
eyre = "0.6.8"
fastrand = "1.8.0"
tokio = {version = "1.21.2", features = ["macros"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
url = "2.3.1"
